src/objects/Zuora__CreditMemoPart__c.object
<CustomObject>
    <description>The applied and unapplied portions of  the credit memo.</description>
    <fields>
        <fullName>Zuora__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Zuora__CreatedDate__c</fullName>
        <description>The date when the invoice was created in the Zuora system.</description>
        <label>Zuora Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Zuora__CreditMemo__c</fullName>
        <label>Credit Memo</label>
        <referenceTo>Zuora__CreditMemo__c</referenceTo>
        <relationshipLabel>Credit Memo Parts</relationshipLabel>
        <relationshipName>Credit_Memo_Parts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Zuora__DebitMemo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Debit Memo</label>
        <referenceTo>Zuora__DebitMemo__c</referenceTo>
        <relationshipLabel>Credit Memo Parts</relationshipLabel>
        <relationshipName>Credit_Memo_Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zuora__External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field holds the Zuora object ID, and is used as external ID for data synchronization between Salesforce and Zuora.</description>
        <externalId>true</externalId>
        <inlineHelpText>This field holds the Zuora object ID, and is used as external ID for data synchronization between Salesforce and Zuora.</inlineHelpText>
        <label>External Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Zuora__Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice</label>
        <referenceTo>Zuora__ZInvoice__c</referenceTo>
        <relationshipLabel>Credit Memo Parts</relationshipLabel>
        <relationshipName>Credit_Memo_Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zuora__UpdatedDate__c</fullName>
        <description>The date when the invoice was updated in the Zuora system.</description>
        <label>Zuora Updated Date</label>
        <type>DateTime</type>
    </fields>
    <label>Credit Memo Part</label>
    <nameField>
        <label>Credit Memo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credit Memo Parts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>